@startuml
skinparam style strictuml
skinparam shadowing false
skinparam DefaultFontName "Helvetica"
skinparam DefaultFontSize 12

skinparam state {
    BackgroundColor #F5F7FA
    BorderColor #A0AEC0
    FontColor #2D3748
    FontSize 13
    FontStyle bold

    ArrowColor #4A5568
    ArrowThickness 1.6
    ArrowFontColor #4A5568
    ArrowFontSize 11
}

skinparam ranksep 100
skinparam nodesep 120

[*] --> INVITED : inviteGuest() [evento PRIVATE_GUEST_LIST e attore autorizzato]

INVITED --> CONFIRMED : confirmInvitation() [Administrator o Organiser assegnato]

INVITED -right-> CANCELLED : cancelInvitation() [attore autorizzato]\noppure cancelEvent()
CONFIRMED -right-> CANCELLED : cancelInvitation() [attore autorizzato]\noppure cancelEvent()

@endum
